Increasing MaxPermSize for unit test phase.
+review